trunk/Archive2/84/5254cabe87b2e0/output
int
string
int, int, int
int
string
int, int, int
main.cpp:29:21: error: default initialization of an object of const type 'const MyBigType' requires a user-provided default constructor
    MyBigType const big;
                    ^
1 error generated.
